fix(ui): Ensured price on trade component doesn't wrap
Closes #5

--- a/apps/xmas-commodities/src/app/game/trade/trade.component.scss
+++ b/apps/xmas-commodities/src/app/game/trade/trade.component.scss
@@ -27,6 +27,10 @@ hr {
 span {
   padding: 0.5rem;
 
+  &.no-wrap {
+    white-space: nowrap;
+  }
+
   &.marker-container {
     position: relative;
   }
